[gd_scene load_steps=10 format=3 uid="uid://dqu6o16nu51u8"]

[ext_resource type="Script" path="res://scripts/areaScripts/so_1t_3.gd" id="1_4fkwj"]
[ext_resource type="Texture2D" uid="uid://fykgjppgkg83" path="res://assets/background/S01-T3.png" id="1_406h7"]
[ext_resource type="Shader" path="res://shader/hitShader.gdshader" id="3_sod40"]
[ext_resource type="PackedScene" uid="uid://chyshasankgsd" path="res://scene/spawn.tscn" id="4_3jihn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f8xuq"]
shader = ExtResource("3_sod40")
shader_parameter/strength = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wdt65"]
size = Vector2(64, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtwqr"]
size = Vector2(1152, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0ab5"]
size = Vector2(1152, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4pv8w"]
size = Vector2(744, 18)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_4fkwj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_406h7")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="hitEffect" type="SubViewportContainer" parent="."]
visible = false
z_index = 10
material = SubResource("ShaderMaterial_f8xuq")
layout_direction = 1
offset_left = -639.0
offset_top = -360.0
offset_right = 641.0
offset_bottom = 360.0

[node name="SubViewport" type="SubViewport" parent="hitEffect"]
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 0

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16777216
collision_mask = 0

[node name="wallLeft" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-608, 0)
shape = SubResource("RectangleShape2D_wdt65")

[node name="wallRight" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(608, 0)
shape = SubResource("RectangleShape2D_wdt65")

[node name="wallTop" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -328)
shape = SubResource("RectangleShape2D_vtwqr")

[node name="wallBottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, 318.5)
shape = SubResource("RectangleShape2D_r0ab5")

[node name="platform" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-8, 146)
shape = SubResource("RectangleShape2D_4pv8w")
one_way_collision = true

[node name="playerSpawn" type="Marker2D" parent="."]
position = Vector2(-517, 213)

[node name="enemyspawn1" type="Marker2D" parent="."]
position = Vector2(310, 232)

[node name="enemyspawn2" type="Marker2D" parent="."]
position = Vector2(302, 72)

[node name="enemyspawn3" type="Marker2D" parent="."]
position = Vector2(-318, 232)

[node name="enemySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="enemy1spawn" parent="." instance=ExtResource("4_3jihn")]

[node name="enemy2spawn" parent="." instance=ExtResource("4_3jihn")]

[node name="enemy3spawn" parent="." instance=ExtResource("4_3jihn")]

[connection signal="timeout" from="enemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
